--- a/Assets/CSS/12-bool-workframe-respo.css
+++ b/Assets/CSS/12-bool-workframe-respo.css
@@ -19,6 +19,7 @@
 /* 12 colonne */
 [class*="col-"] {
     float: left;
+    margin: 1rem 0;
 }
 .dbg [class*="col-"] {
     background-color: lightpink;
